// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`assembleFile snapshot > generates expected output from example-pages-config.yml 1`] = `
"// THIS FILE IS AUTO-GENERATED by astro-pagescms
// Source: .pages.yml — do not edit manually, changes will be overwritten on next build

import { file, glob } from 'astro/loaders';
import { z } from 'astro/zod';
import type { SchemaContext } from 'astro:content';
import { defineCollection } from 'astro:content';

// Collections
const pages = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/pages" }),
  schema: ({ image }) =>
    z.object({
  uuid: z.string().uuid().optional(),
  title: z.string().optional(),
  description: z.string().optional(),
  slug: z.string().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: image().or(z.string()).optional(),
}).optional(),
  sections: z.array(
z.discriminatedUnion("type", [
z.object({
  type: z.literal("imageHeroBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  image: image().or(z.string()),
  imageAlt: z.string().optional(),
  minHeight: z.string().optional(),
  colorScheme: z.enum(["light", "dark"]).optional(),
}),
z.object({
  type: z.literal("headingBlock"),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  id: z.string().optional(),
  pt: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  pb: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
}),
z.object({
  type: z.literal("videoHeroBlock"),
  id: z.string().optional(),
  src: z.string(),
}),
z.object({
  type: z.literal("contactBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("leadBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("textBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("clientLogosBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("serviceCardsBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("caseStudyGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  order: z.array(z.string()).default([]),
}),
z.object({
  type: z.literal("galleryBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  images: z.array(z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("mediaTextBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
  image: z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
}).optional(),
  mediaSide: z.enum(["left", "right"]).optional(),
  padding: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  fixedRatio: z.string().optional(),
  cta: z.object({
  label: z.string().optional(),
  href: z.string().optional(),
}).optional(),
}),
z.object({
  type: z.literal("tileGridBlock"),
  id: z.string().optional(),
  columns: z.enum(["2", "3"]).optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  image: image().or(z.string()).optional(),
  imageAlt: z.string().optional(),
  href: z.string().optional(),
  cta: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("textGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  body: z.string().optional(),
})).default([]),
}),
])
).default([]),
}),
});
const clients = defineCollection({
  loader: file("./src/content/clients.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String(i), ...item }));
    },
  }),
  schema: ({ image }) =>
    z.object({
  name: z.string().optional(),
  logo: image().optional(),
}),
});
const services = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/services" }),
  schema: ({ image }) =>
    z.object({
  uuid: z.string().uuid().optional(),
  title: z.string().optional(),
  description: z.string().optional(),
  slug: z.string().optional(),
  icon: image().or(z.string()).optional(),
  cta: z.string().optional(),
  order: z.number().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: image().or(z.string()).optional(),
}).optional(),
  sections: z.array(
z.discriminatedUnion("type", [
z.object({
  type: z.literal("imageHeroBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  image: image().or(z.string()),
  imageAlt: z.string().optional(),
  minHeight: z.string().optional(),
  colorScheme: z.enum(["light", "dark"]).optional(),
}),
z.object({
  type: z.literal("headingBlock"),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  id: z.string().optional(),
  pt: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  pb: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
}),
z.object({
  type: z.literal("videoHeroBlock"),
  id: z.string().optional(),
  src: z.string(),
}),
z.object({
  type: z.literal("contactBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("leadBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("textBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("clientLogosBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("serviceCardsBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("caseStudyGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  order: z.array(z.string()).default([]),
}),
z.object({
  type: z.literal("galleryBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  images: z.array(z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("mediaTextBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
  image: z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
}).optional(),
  mediaSide: z.enum(["left", "right"]).optional(),
  padding: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  fixedRatio: z.string().optional(),
  cta: z.object({
  label: z.string().optional(),
  href: z.string().optional(),
}).optional(),
}),
z.object({
  type: z.literal("tileGridBlock"),
  id: z.string().optional(),
  columns: z.enum(["2", "3"]).optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  image: image().or(z.string()).optional(),
  imageAlt: z.string().optional(),
  href: z.string().optional(),
  cta: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("textGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  body: z.string().optional(),
})).default([]),
}),
])
).default([]),
}),
});
const testimonials = defineCollection({
  loader: file("./src/content/testimonials.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String((item as any).uuid ?? i), ...item }));
    },
  }),
  schema: ({ image }) =>
    z.object({
  uuid: z.string().uuid().optional(),
  quote: z.string().optional(),
  author: z.string().optional(),
  role: z.string().optional(),
  logo: image().optional(),
  logoAlt: z.string().optional(),
}),
});
const redirects = defineCollection({
  loader: file("./src/content/redirects.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String(i), ...item }));
    },
  }),
  schema: z.object({
  from: z.string(),
  to: z.string(),
  status: z.enum(["301", "302"]).default("301"),
}),
});
const caseStudies = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/caseStudies" }),
  schema: ({ image }) =>
    z.object({
  uuid: z.string().uuid().optional(),
  title: z.string(),
  client: z.string().optional(),
  featuredImage: z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
}),
  excerpt: z.string().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: image().or(z.string()).optional(),
}).optional(),
  gallery: z.array(z.object({
  src: image().or(z.string()).optional(),
  alt: z.string().optional(),
})).default([]),
}),
});

export const collections = { pages, clients, services, testimonials, redirects, caseStudies };
"
`;

exports[`assembleFile snapshot > imageMode:string uses z.string() for images 1`] = `
"// THIS FILE IS AUTO-GENERATED by astro-pagescms
// Source: .pages.yml — do not edit manually, changes will be overwritten on next build

import { file, glob } from 'astro/loaders';
import { z } from 'astro/zod';
import type { SchemaContext } from 'astro:content';
import { defineCollection } from 'astro:content';

// Collections
const pages = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/pages" }),
  schema: z.object({
  uuid: z.string().uuid().optional(),
  title: z.string().optional(),
  description: z.string().optional(),
  slug: z.string().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: z.string().optional(),
}).optional(),
  sections: z.array(
z.discriminatedUnion("type", [
z.object({
  type: z.literal("imageHeroBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  image: z.string(),
  imageAlt: z.string().optional(),
  minHeight: z.string().optional(),
  colorScheme: z.enum(["light", "dark"]).optional(),
}),
z.object({
  type: z.literal("headingBlock"),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  id: z.string().optional(),
  pt: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  pb: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
}),
z.object({
  type: z.literal("videoHeroBlock"),
  id: z.string().optional(),
  src: z.string(),
}),
z.object({
  type: z.literal("contactBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("leadBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("textBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("clientLogosBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("serviceCardsBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("caseStudyGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  order: z.array(z.string()).default([]),
}),
z.object({
  type: z.literal("galleryBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  images: z.array(z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("mediaTextBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
  image: z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
}).optional(),
  mediaSide: z.enum(["left", "right"]).optional(),
  padding: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  fixedRatio: z.string().optional(),
  cta: z.object({
  label: z.string().optional(),
  href: z.string().optional(),
}).optional(),
}),
z.object({
  type: z.literal("tileGridBlock"),
  id: z.string().optional(),
  columns: z.enum(["2", "3"]).optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  image: z.string().optional(),
  imageAlt: z.string().optional(),
  href: z.string().optional(),
  cta: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("textGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  body: z.string().optional(),
})).default([]),
}),
])
).default([]),
}),
});
const clients = defineCollection({
  loader: file("./src/content/clients.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String(i), ...item }));
    },
  }),
  schema: z.object({
  name: z.string().optional(),
  logo: z.string().optional(),
}),
});
const services = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/services" }),
  schema: z.object({
  uuid: z.string().uuid().optional(),
  title: z.string().optional(),
  description: z.string().optional(),
  slug: z.string().optional(),
  icon: z.string().optional(),
  cta: z.string().optional(),
  order: z.number().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: z.string().optional(),
}).optional(),
  sections: z.array(
z.discriminatedUnion("type", [
z.object({
  type: z.literal("imageHeroBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  image: z.string(),
  imageAlt: z.string().optional(),
  minHeight: z.string().optional(),
  colorScheme: z.enum(["light", "dark"]).optional(),
}),
z.object({
  type: z.literal("headingBlock"),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  id: z.string().optional(),
  pt: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  pb: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
}),
z.object({
  type: z.literal("videoHeroBlock"),
  id: z.string().optional(),
  src: z.string(),
}),
z.object({
  type: z.literal("contactBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("leadBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("textBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
}),
z.object({
  type: z.literal("clientLogosBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("serviceCardsBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
}),
z.object({
  type: z.literal("caseStudyGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  order: z.array(z.string()).default([]),
}),
z.object({
  type: z.literal("galleryBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  images: z.array(z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("mediaTextBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  body: z.string().optional(),
  image: z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
}).optional(),
  mediaSide: z.enum(["left", "right"]).optional(),
  padding: z.enum(["none", "sm", "md", "lg", "xl", "2xl"]).optional(),
  fixedRatio: z.string().optional(),
  cta: z.object({
  label: z.string().optional(),
  href: z.string().optional(),
}).optional(),
}),
z.object({
  type: z.literal("tileGridBlock"),
  id: z.string().optional(),
  columns: z.enum(["2", "3"]).optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  image: z.string().optional(),
  imageAlt: z.string().optional(),
  href: z.string().optional(),
  cta: z.string().optional(),
})).default([]),
}),
z.object({
  type: z.literal("textGridBlock"),
  id: z.string().optional(),
  heading: z.string().optional(),
  subtitle: z.string().optional(),
  items: z.array(z.object({
  title: z.string().optional(),
  body: z.string().optional(),
})).default([]),
}),
])
).default([]),
}),
});
const testimonials = defineCollection({
  loader: file("./src/content/testimonials.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String((item as any).uuid ?? i), ...item }));
    },
  }),
  schema: z.object({
  uuid: z.string().uuid().optional(),
  quote: z.string().optional(),
  author: z.string().optional(),
  role: z.string().optional(),
  logo: z.string().optional(),
  logoAlt: z.string().optional(),
}),
});
const redirects = defineCollection({
  loader: file("./src/content/redirects.json", {
    parser: (text) => {
      const items = JSON.parse(text) as Array<Record<string, unknown>>;
      return items.map((item, i) => ({ id: String(i), ...item }));
    },
  }),
  schema: z.object({
  from: z.string(),
  to: z.string(),
  status: z.enum(["301", "302"]).default("301"),
}),
});
const caseStudies = defineCollection({
  loader: glob({ pattern: "**/*.{md,mdx}", base: "./src/content/caseStudies" }),
  schema: z.object({
  uuid: z.string().uuid().optional(),
  title: z.string(),
  client: z.string().optional(),
  featuredImage: z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
}),
  excerpt: z.string().optional(),
  seo: z.object({
  title: z.string().optional(),
  description: z.string().optional(),
  image: z.string().optional(),
}).optional(),
  gallery: z.array(z.object({
  src: z.string().optional(),
  alt: z.string().optional(),
})).default([]),
}),
});

export const collections = { pages, clients, services, testimonials, redirects, caseStudies };
"
`;
